Added configuration properties for Hibernate and Hikari on application.properties